
// Grade : ★
// Date : 2016-08-08 ~2016-08-12
// Context

1. MACS
	- HomeReturn의 지령인 Buffer 실행을 외부 함수로 변경함
	- Laser Process 함수 추가 (Buffer 실행 함수를 사용함)
	- Buffer 의 내부 메모리에 데이터 Write 기능 추가
2. MOpPanel
	- Home Return의 확인 부분 수정 
	  ACS의 HomeFlag Bit가 정상 동작으로 해당 기능을 Enable함. 

// Grade : ★
// Date : 2016-08-15
// Context

1. Scanner 프로그램을 합체함
	- Scanner Form 구성 및 Class를 첨부해서 error부분 수정함.

////////////////////////////////////////////////////////////////////////////////////////////
// LHS
// Version : 0.0.1
// Grade : ★
// Date : 2016-03-07
// Context
1. MDataManager -> CSystemData -> Scanner ini Data 관리를 위한 Class 배열 선언.
2. MLWDicer -> CreatePolygonScanner() Scanner 갯수 만큼 Hardware Layer 생성하는 Function 추가. : Scanner Max 4 ea
3. UI - FormMessageBox 추가
4. UI - FormLaserMaint Scanner IP, Port 입력 추가

// Version : 0.0.2
// Grade : ★
// Date : 2016-03-21
// Context
// * Polygon Scanner Interface 보완
// 1. TFTP 통신 Protocol 추가
//   - InitializeTFTP()
//   - SendTFTPFile(string strIP, string strFilePath)
// 2. COM Serial 통신 Debugging 수정
//   - Event Handler 생성 해제 위치 변경
//   - Receive Event Byte 사이즈 Read로 변경
// 3. Scanner Interface Test를 위한 Manual UI 추가
//   - FormLaserMaint 
// 4. ImageSave 1빈트 단색 Bitmap 형식으로 저장하도록 수정

// Version : 0.0.3
// Grade : ★
// Date : 2016-03-28
// Context
// * UI 변경
// 1. Axis Operation UI 추가
// 2. IO Operation UI 추가
// 3. Excel IO List Load 추가
//  -  MDataManager -> LoadExcelIOList()
//  - IO List 경로 SFA\LWDicer\SystemData\LWDicer_IO_List.xlsx

// Version : 0.0.4
// Grade : ★
// Date : 2016-04-04
// Context
// * UI 변경
// 1. Axis Operation UI 추가
// 2. Motor Parameter UI 추가 / Motor Parameter Excel File Load,Save 구문 추가
//  - MDataManager -> ExportMotorDataFromExcel(string [,] strParameter)
//  - Motor Data 경로 SFA\LWDicer\SystemData\SystemData.xlsx

// Version : 0.0.5
// Grade : ★
// Date : 2016-04-11
// Context
// * UI 변경
// 1. Scanner Image 편집 UI 추가

// Version : 0.0.6
// Grade : ★
// Date : 2016-04-27
// Context
// 1. Spinner Mechanical Layer 추가